cuqui/netqasm/.antlr/NetQASMParser.java
// Generated from /home/jorge.vazquez.perez/Nextcloud/Proyectos/InQuIR_Compiler/cuqui/netqasm/NetQASMParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class NetQASMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PREAMBLE_NETQASM=1, PREAMBLE_APPID=2, PREAMBLE_DEFINE=3, IMMEDIATE=4, 
		C_REG=5, R_REG=6, Q_REG=7, M_REG=8, ADDRESS=9, ARRAY_ENTRY=10, ARRAY_SLICE=11, 
		VAR=12, QALLOC=13, ARRAY=14, INIT=15, SET=16, STORE=17, LOAD=18, UNDEF=19, 
		LEA=20, JMP=21, BEZ=22, BNZ=23, BEQ=24, BNE=25, BLT=26, BGE=27, ADD=28, 
		SUB=29, ADDM=30, SUBM=31, X=32, Y=33, Z=34, H=35, S=36, K=37, T=38, ROT_X=39, 
		ROT_Y=40, ROT_Z=41, CNOT=42, CPHASE=43, MEAS=44, PMR_XYX=45, PMR_ZXZ=46, 
		PMR_YZY=47, CREATE_EPR=48, RECV_EPR=49, WAIT_ALL=50, WAIT_ANY=51, WAIT_SINGLE=52, 
		QFREE=53, RET_REG=54, RET_ARR=55, COMMENT=56, LINE_NUMBER=57, ID=58, VERSION_NUMBER=59, 
		NUMBER=60, HASH=61, LCURLY=62, RCURLY=63, EOL=64, WS=65;
	public static final int
		RULE_program = 0, RULE_preamble = 1, RULE_line = 2, RULE_instruction = 3, 
		RULE_regInstr = 4, RULE_regRegInstr = 5, RULE_regImmImmInstr = 6, RULE_regRegRegInstr = 7, 
		RULE_regRegRegRegInstr = 8, RULE_immInstr = 9, RULE_regRegImmInstr = 10, 
		RULE_regImmInstr = 11, RULE_regEntryInstr = 12, RULE_regAddrInstr = 13, 
		RULE_arrayEntryInstr = 14, RULE_arraySliceInstr = 15, RULE_addrInstr = 16, 
		RULE_reg5Instr = 17, RULE_classicalReg = 18, RULE_version = 19, RULE_appid = 20, 
		RULE_define = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "preamble", "line", "instruction", "regInstr", "regRegInstr", 
			"regImmImmInstr", "regRegRegInstr", "regRegRegRegInstr", "immInstr", 
			"regRegImmInstr", "regImmInstr", "regEntryInstr", "regAddrInstr", "arrayEntryInstr", 
			"arraySliceInstr", "addrInstr", "reg5Instr", "classicalReg", "version", 
			"appid", "define"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'NETQASM'", "'APPID'", "'DEFINE'", null, null, null, null, null, 
			null, null, null, null, "'qalloc'", "'array'", "'init'", "'set'", "'store'", 
			"'load'", "'undef'", "'lea'", "'jmp'", "'bez'", "'bnz'", "'beq'", "'bne'", 
			"'blt'", "'bge'", "'add'", "'sub'", "'addm'", "'subm'", "'x'", "'y'", 
			"'z'", "'h'", "'s'", "'k'", "'t'", "'rot_x'", "'rot_y'", "'rot_z'", "'cnot'", 
			"'cphase'", "'meas'", "'pmr_xyx'", "'pmr_zxz'", "'pmr_yzy'", "'create_epr'", 
			"'recv_epr'", "'wait_all'", "'wait_any'", "'wait_single'", "'qfree'", 
			"'ret_reg'", "'ret_arr'", null, null, null, null, null, "'#'", "'{'", 
			"'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PREAMBLE_NETQASM", "PREAMBLE_APPID", "PREAMBLE_DEFINE", "IMMEDIATE", 
			"C_REG", "R_REG", "Q_REG", "M_REG", "ADDRESS", "ARRAY_ENTRY", "ARRAY_SLICE", 
			"VAR", "QALLOC", "ARRAY", "INIT", "SET", "STORE", "LOAD", "UNDEF", "LEA", 
			"JMP", "BEZ", "BNZ", "BEQ", "BNE", "BLT", "BGE", "ADD", "SUB", "ADDM", 
			"SUBM", "X", "Y", "Z", "H", "S", "K", "T", "ROT_X", "ROT_Y", "ROT_Z", 
			"CNOT", "CPHASE", "MEAS", "PMR_XYX", "PMR_ZXZ", "PMR_YZY", "CREATE_EPR", 
			"RECV_EPR", "WAIT_ALL", "WAIT_ANY", "WAIT_SINGLE", "QFREE", "RET_REG", 
			"RET_ARR", "COMMENT", "LINE_NUMBER", "ID", "VERSION_NUMBER", "NUMBER", 
			"HASH", "LCURLY", "RCURLY", "EOL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NetQASMParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NetQASMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public PreambleContext preamble() {
			return getRuleContext(PreambleContext.class,0);
		}
		public TerminalNode EOF() { return getToken(NetQASMParser.EOF, 0); }
		public List<TerminalNode> EOL() { return getTokens(NetQASMParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(NetQASMParser.EOL, i);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			preamble();
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EOL) {
				{
				{
				setState(45);
				match(EOL);
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 125854498961743872L) != 0)) {
				{
				{
				setState(51);
				line();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PreambleContext extends ParserRuleContext {
		public VersionContext version() {
			return getRuleContext(VersionContext.class,0);
		}
		public List<TerminalNode> EOL() { return getTokens(NetQASMParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(NetQASMParser.EOL, i);
		}
		public AppidContext appid() {
			return getRuleContext(AppidContext.class,0);
		}
		public List<DefineContext> define() {
			return getRuleContexts(DefineContext.class);
		}
		public DefineContext define(int i) {
			return getRuleContext(DefineContext.class,i);
		}
		public PreambleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preamble; }
	}

	public final PreambleContext preamble() throws RecognitionException {
		PreambleContext _localctx = new PreambleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_preamble);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			version();
			setState(60);
			match(EOL);
			setState(61);
			appid();
			setState(62);
			match(EOL);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HASH) {
				{
				{
				setState(63);
				define();
				setState(64);
				match(EOL);
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public TerminalNode EOL() { return getToken(NetQASMParser.EOL, 0); }
		public TerminalNode COMMENT() { return getToken(NetQASMParser.COMMENT, 0); }
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_line);
		try {
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QALLOC:
			case ARRAY:
			case INIT:
			case SET:
			case STORE:
			case LOAD:
			case UNDEF:
			case LEA:
			case JMP:
			case BEZ:
			case BNZ:
			case BEQ:
			case BNE:
			case BLT:
			case BGE:
			case ADD:
			case SUB:
			case ADDM:
			case SUBM:
			case X:
			case Y:
			case Z:
			case H:
			case S:
			case K:
			case T:
			case ROT_X:
			case ROT_Y:
			case ROT_Z:
			case CNOT:
			case CPHASE:
			case MEAS:
			case CREATE_EPR:
			case RECV_EPR:
			case WAIT_ALL:
			case WAIT_ANY:
			case WAIT_SINGLE:
			case QFREE:
			case RET_ARR:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				instruction();
				setState(72);
				match(EOL);
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				match(COMMENT);
				setState(75);
				match(EOL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public RegInstrContext regInstr() {
			return getRuleContext(RegInstrContext.class,0);
		}
		public RegRegInstrContext regRegInstr() {
			return getRuleContext(RegRegInstrContext.class,0);
		}
		public RegImmImmInstrContext regImmImmInstr() {
			return getRuleContext(RegImmImmInstrContext.class,0);
		}
		public RegRegRegInstrContext regRegRegInstr() {
			return getRuleContext(RegRegRegInstrContext.class,0);
		}
		public RegRegRegRegInstrContext regRegRegRegInstr() {
			return getRuleContext(RegRegRegRegInstrContext.class,0);
		}
		public ImmInstrContext immInstr() {
			return getRuleContext(ImmInstrContext.class,0);
		}
		public RegRegImmInstrContext regRegImmInstr() {
			return getRuleContext(RegRegImmInstrContext.class,0);
		}
		public RegImmInstrContext regImmInstr() {
			return getRuleContext(RegImmInstrContext.class,0);
		}
		public RegEntryInstrContext regEntryInstr() {
			return getRuleContext(RegEntryInstrContext.class,0);
		}
		public RegAddrInstrContext regAddrInstr() {
			return getRuleContext(RegAddrInstrContext.class,0);
		}
		public ArrayEntryInstrContext arrayEntryInstr() {
			return getRuleContext(ArrayEntryInstrContext.class,0);
		}
		public ArraySliceInstrContext arraySliceInstr() {
			return getRuleContext(ArraySliceInstrContext.class,0);
		}
		public AddrInstrContext addrInstr() {
			return getRuleContext(AddrInstrContext.class,0);
		}
		public Reg5InstrContext reg5Instr() {
			return getRuleContext(Reg5InstrContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruction);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				regInstr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				regRegInstr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				regImmImmInstr();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				regRegRegInstr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				regRegRegRegInstr();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(83);
				immInstr();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(84);
				regRegImmInstr();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(85);
				regImmInstr();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(86);
				regEntryInstr();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(87);
				regAddrInstr();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(88);
				arrayEntryInstr();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(89);
				arraySliceInstr();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(90);
				addrInstr();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(91);
				reg5Instr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegInstrContext extends ParserRuleContext {
		public TerminalNode QALLOC() { return getToken(NetQASMParser.QALLOC, 0); }
		public TerminalNode Q_REG() { return getToken(NetQASMParser.Q_REG, 0); }
		public TerminalNode INIT() { return getToken(NetQASMParser.INIT, 0); }
		public TerminalNode X() { return getToken(NetQASMParser.X, 0); }
		public TerminalNode Y() { return getToken(NetQASMParser.Y, 0); }
		public TerminalNode Z() { return getToken(NetQASMParser.Z, 0); }
		public TerminalNode H() { return getToken(NetQASMParser.H, 0); }
		public TerminalNode S() { return getToken(NetQASMParser.S, 0); }
		public TerminalNode K() { return getToken(NetQASMParser.K, 0); }
		public TerminalNode T() { return getToken(NetQASMParser.T, 0); }
		public TerminalNode QFREE() { return getToken(NetQASMParser.QFREE, 0); }
		public TerminalNode RET_ARR() { return getToken(NetQASMParser.RET_ARR, 0); }
		public TerminalNode C_REG() { return getToken(NetQASMParser.C_REG, 0); }
		public TerminalNode R_REG() { return getToken(NetQASMParser.R_REG, 0); }
		public TerminalNode M_REG() { return getToken(NetQASMParser.M_REG, 0); }
		public RegInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regInstr; }
	}

	public final RegInstrContext regInstr() throws RecognitionException {
		RegInstrContext _localctx = new RegInstrContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_regInstr);
		int _la;
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QALLOC:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				match(QALLOC);
				setState(95);
				match(Q_REG);
				}
				break;
			case INIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				match(INIT);
				setState(97);
				match(Q_REG);
				}
				break;
			case X:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				match(X);
				setState(99);
				match(Q_REG);
				}
				break;
			case Y:
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				match(Y);
				setState(101);
				match(Q_REG);
				}
				break;
			case Z:
				enterOuterAlt(_localctx, 5);
				{
				setState(102);
				match(Z);
				setState(103);
				match(Q_REG);
				}
				break;
			case H:
				enterOuterAlt(_localctx, 6);
				{
				setState(104);
				match(H);
				setState(105);
				match(Q_REG);
				}
				break;
			case S:
				enterOuterAlt(_localctx, 7);
				{
				setState(106);
				match(S);
				setState(107);
				match(Q_REG);
				}
				break;
			case K:
				enterOuterAlt(_localctx, 8);
				{
				setState(108);
				match(K);
				setState(109);
				match(Q_REG);
				}
				break;
			case T:
				enterOuterAlt(_localctx, 9);
				{
				setState(110);
				match(T);
				setState(111);
				match(Q_REG);
				}
				break;
			case QFREE:
				enterOuterAlt(_localctx, 10);
				{
				setState(112);
				match(QFREE);
				setState(113);
				match(Q_REG);
				}
				break;
			case RET_ARR:
				enterOuterAlt(_localctx, 11);
				{
				setState(114);
				match(RET_ARR);
				setState(115);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 480L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegRegInstrContext extends ParserRuleContext {
		public TerminalNode CNOT() { return getToken(NetQASMParser.CNOT, 0); }
		public List<TerminalNode> Q_REG() { return getTokens(NetQASMParser.Q_REG); }
		public TerminalNode Q_REG(int i) {
			return getToken(NetQASMParser.Q_REG, i);
		}
		public TerminalNode CPHASE() { return getToken(NetQASMParser.CPHASE, 0); }
		public TerminalNode MEAS() { return getToken(NetQASMParser.MEAS, 0); }
		public TerminalNode M_REG() { return getToken(NetQASMParser.M_REG, 0); }
		public RegRegInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regRegInstr; }
	}

	public final RegRegInstrContext regRegInstr() throws RecognitionException {
		RegRegInstrContext _localctx = new RegRegInstrContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_regRegInstr);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CNOT:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				match(CNOT);
				setState(119);
				match(Q_REG);
				setState(120);
				match(Q_REG);
				}
				break;
			case CPHASE:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				match(CPHASE);
				setState(122);
				match(Q_REG);
				setState(123);
				match(Q_REG);
				}
				break;
			case MEAS:
				enterOuterAlt(_localctx, 3);
				{
				setState(124);
				match(MEAS);
				setState(125);
				match(Q_REG);
				setState(126);
				match(M_REG);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegImmImmInstrContext extends ParserRuleContext {
		public TerminalNode ROT_X() { return getToken(NetQASMParser.ROT_X, 0); }
		public TerminalNode Q_REG() { return getToken(NetQASMParser.Q_REG, 0); }
		public List<TerminalNode> IMMEDIATE() { return getTokens(NetQASMParser.IMMEDIATE); }
		public TerminalNode IMMEDIATE(int i) {
			return getToken(NetQASMParser.IMMEDIATE, i);
		}
		public TerminalNode ROT_Y() { return getToken(NetQASMParser.ROT_Y, 0); }
		public TerminalNode ROT_Z() { return getToken(NetQASMParser.ROT_Z, 0); }
		public RegImmImmInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regImmImmInstr; }
	}

	public final RegImmImmInstrContext regImmImmInstr() throws RecognitionException {
		RegImmImmInstrContext _localctx = new RegImmImmInstrContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_regImmImmInstr);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ROT_X:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				match(ROT_X);
				setState(130);
				match(Q_REG);
				setState(131);
				match(IMMEDIATE);
				setState(132);
				match(IMMEDIATE);
				}
				break;
			case ROT_Y:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				match(ROT_Y);
				setState(134);
				match(Q_REG);
				setState(135);
				match(IMMEDIATE);
				setState(136);
				match(IMMEDIATE);
				}
				break;
			case ROT_Z:
				enterOuterAlt(_localctx, 3);
				{
				setState(137);
				match(ROT_Z);
				setState(138);
				match(Q_REG);
				setState(139);
				match(IMMEDIATE);
				setState(140);
				match(IMMEDIATE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegRegRegInstrContext extends ParserRuleContext {
		public TerminalNode ADD() { return getToken(NetQASMParser.ADD, 0); }
		public TerminalNode R_REG() { return getToken(NetQASMParser.R_REG, 0); }
		public List<ClassicalRegContext> classicalReg() {
			return getRuleContexts(ClassicalRegContext.class);
		}
		public ClassicalRegContext classicalReg(int i) {
			return getRuleContext(ClassicalRegContext.class,i);
		}
		public TerminalNode SUB() { return getToken(NetQASMParser.SUB, 0); }
		public RegRegRegInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regRegRegInstr; }
	}

	public final RegRegRegInstrContext regRegRegInstr() throws RecognitionException {
		RegRegRegInstrContext _localctx = new RegRegRegInstrContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_regRegRegInstr);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ADD:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				match(ADD);
				setState(144);
				match(R_REG);
				setState(145);
				classicalReg();
				setState(146);
				classicalReg();
				}
				break;
			case SUB:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				match(SUB);
				setState(149);
				match(R_REG);
				setState(150);
				classicalReg();
				setState(151);
				classicalReg();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegRegRegRegInstrContext extends ParserRuleContext {
		public TerminalNode ADDM() { return getToken(NetQASMParser.ADDM, 0); }
		public List<TerminalNode> R_REG() { return getTokens(NetQASMParser.R_REG); }
		public TerminalNode R_REG(int i) {
			return getToken(NetQASMParser.R_REG, i);
		}
		public List<ClassicalRegContext> classicalReg() {
			return getRuleContexts(ClassicalRegContext.class);
		}
		public ClassicalRegContext classicalReg(int i) {
			return getRuleContext(ClassicalRegContext.class,i);
		}
		public TerminalNode SUBM() { return getToken(NetQASMParser.SUBM, 0); }
		public TerminalNode RECV_EPR() { return getToken(NetQASMParser.RECV_EPR, 0); }
		public List<TerminalNode> C_REG() { return getTokens(NetQASMParser.C_REG); }
		public TerminalNode C_REG(int i) {
			return getToken(NetQASMParser.C_REG, i);
		}
		public RegRegRegRegInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regRegRegRegInstr; }
	}

	public final RegRegRegRegInstrContext regRegRegRegInstr() throws RecognitionException {
		RegRegRegRegInstrContext _localctx = new RegRegRegRegInstrContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_regRegRegRegInstr);
		int _la;
		try {
			setState(172);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ADDM:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				match(ADDM);
				setState(156);
				match(R_REG);
				setState(157);
				classicalReg();
				setState(158);
				classicalReg();
				setState(159);
				classicalReg();
				}
				break;
			case SUBM:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				match(SUBM);
				setState(162);
				match(R_REG);
				setState(163);
				classicalReg();
				setState(164);
				classicalReg();
				setState(165);
				classicalReg();
				}
				break;
			case RECV_EPR:
				enterOuterAlt(_localctx, 3);
				{
				setState(167);
				match(RECV_EPR);
				setState(168);
				_la = _input.LA(1);
				if ( !(_la==C_REG || _la==R_REG) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(169);
				_la = _input.LA(1);
				if ( !(_la==C_REG || _la==R_REG) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(170);
				_la = _input.LA(1);
				if ( !(_la==C_REG || _la==R_REG) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(171);
				_la = _input.LA(1);
				if ( !(_la==C_REG || _la==R_REG) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImmInstrContext extends ParserRuleContext {
		public TerminalNode JMP() { return getToken(NetQASMParser.JMP, 0); }
		public TerminalNode LINE_NUMBER() { return getToken(NetQASMParser.LINE_NUMBER, 0); }
		public ImmInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_immInstr; }
	}
